@@ -1,3 +1,6 @@
+2010-02-20  Dave McMurtrie  <davemcmurtrie@gmail.com>
+	* common.h: Updated version to 1.2.7
+
 2009-10-16  Dave McMurtrie  <davemcmurtrie@gmail.com>
 	* main.c: Applied patch by Jose Luis Tallon to fix compiler warnings.
           Applied patch by Jose Luis Tallon to provide for default config
